--- a/src/main/resources/config_ja.yml
+++ b/src/main/resources/config_ja.yml
@@ -235,3 +235,6 @@ japanizePlayerDefault: true
 # 返送してもらってから処理を行うモードです。
 # 配下のすべてのspigotサーバーにも、LunaChatの導入が必要です。
 bungeePassThroughMode: false
+
+# BungeeCord でチャットを処理するべきサーバー
+bungeeCatcherEnabledServers: []
