--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.1.0</version>
+        <version>3.3.1</version>
         <configuration>
           <source>${java.version}</source>
           <encoding>UTF-8</encoding>
@@ -67,7 +67,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>3.2.1</version>
+        <version>3.2.4</version>
         <configuration>
           <createDependencyReducedPom>false</createDependencyReducedPom>
           <minimizeJar>true</minimizeJar>
@@ -104,19 +104,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.12.4</version>
-        <configuration>
-          <junitArtifactName>junit:junit</junitArtifactName>
-          <encoding>UTF-8</encoding>
-          <inputEncoding>UTF-8</inputEncoding>
-          <outputEncoding>UTF-8</outputEncoding>
-          <argLine>-Dfile.encoding=UTF-8</argLine>
-        </configuration>
+        <version>3.0.0-M5</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
-        <version>1.3.1</version>
+        <version>2.8.1</version>
       </plugin>
     </plugins>
   </build>
@@ -135,7 +128,7 @@
     <repository>
       <id>onarandombox-repo</id>
       <name>Multiverse repository</name>
-      <url>http://repo.onarandombox.com/content/repositories/multiverse/</url>
+      <url>https://repo.onarandombox.com/content/groups/public/</url>
     </repository>
     <repository>
       <id>codemc-repo</id>
@@ -145,7 +138,7 @@
     <repository>
       <id>weaondara-repo</id>
       <name>wea_ondara's Repository</name>
-      <url>http://repo.wea-ondara.net/repository/public/</url>
+      <url>https://repo.wea-ondara.net/repository/public/</url>
     </repository>
     <repository>
       <id>md5-repo</id>
@@ -163,21 +156,21 @@
     <dependency>
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot-api</artifactId>
-      <version>1.16.2-R0.1-SNAPSHOT</version>
+      <version>1.17.1-R0.1-SNAPSHOT</version>
       <optional>true</optional>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>net.md-5</groupId>
       <artifactId>bungeecord-api</artifactId>
-      <version>1.16-R0.2-SNAPSHOT</version>
+      <version>1.17-R0.1-SNAPSHOT</version>
       <optional>true</optional>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>net.md-5</groupId>
       <artifactId>bungeecord-chat</artifactId>
-      <version>1.16-R0.3</version>
+      <version>1.17-R0.1-SNAPSHOT</version>
       <optional>true</optional>
       <scope>provided</scope>
     </dependency>
@@ -195,9 +188,9 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>org.dynmap</groupId>
+      <groupId>us.dynmap</groupId>
       <artifactId>dynmap-api</artifactId>
-      <version>2.0</version>
+      <version>3.1</version>
       <optional>true</optional>
       <scope>provided</scope>
       <exclusions>
@@ -210,14 +203,14 @@
     <dependency>
       <groupId>com.onarandombox.multiversecore</groupId>
       <artifactId>Multiverse-Core</artifactId>
-      <version>4.1.0</version>
+      <version>4.3.1</version>
       <optional>true</optional>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.gmail.nossr50.mcMMO</groupId>
       <artifactId>mcMMO</artifactId>
-      <version>2.1.146</version>
+      <version>2.1.202</version>
       <optional>true</optional>
       <scope>provided</scope>
       <exclusions>
@@ -253,36 +246,36 @@
     <dependency>
       <groupId>net.luckperms</groupId>
       <artifactId>api</artifactId>
-      <version>5.1</version>
+      <version>5.3</version>
       <optional>true</optional>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.bstats</groupId>
       <artifactId>bstats-bukkit</artifactId>
-      <version>1.7</version>
+      <version>2.2.1</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.bstats</groupId>
       <artifactId>bstats-bungeecord</artifactId>
-      <version>1.7</version>
+      <version>2.2.1</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.8.6</version>
+      <version>2.8.9</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>3.11</version>
+      <version>3.12.0</version>
     </dependency>
     <dependency>
       <groupId>org.jetbrains</groupId>
       <artifactId>annotations</artifactId>
-      <version>20.1.0</version>
+      <version>23.0.0</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
