--- a/pom.xml
+++ b/pom.xml
@@ -262,11 +262,13 @@
       <version>3.0.1</version>
       <scope>compile</scope>
     </dependency>
+    <!-- okocraft start - use runtime GSON
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.10.1</version>
     </dependency>
+    -->
     <!-- okocraft start - remove commons-lang3
     <dependency>
       <groupId>org.apache.commons</groupId>
