--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,6 +5,7 @@ authors: [ucchy, YukiLeafX, LazyGon, tomo1560]
 description: ${project.description}
 softdepend: [Vault, dynmap, Multiverse-Core, mcMMO]
 api-version: "1.16"
+folia-supported: true
 
 commands:
   lunachat:
